# ai-knowledge-base

./: .gitignore  README.md  app.py  pyproject.toml
docs/: eval_report.md
src/: models.py
src/api/: main.py
src/chunker/: text_splitter.py
src/embedder/: embedder.py
src/generator/: generator.py
src/loader/: document_loader.py
src/retriever/: hybrid_retriever.py  reranker.py  vector_store.py
tests/: eval_dataset.json  test_chunker.py  test_e2e.py  test_embedder.py  test_generator.py  test_loader.py  test_ragas_eval.py  test_retriever.py  test_vector_store.py
