[project]
name = "ai-knowledge-base"
version = "0.1.0"
description = "企业知识库RAG问答系统"
authors = [
    {name = "yzq723232713",email = "723232713@qq.com"}
]
requires-python = "^3.11"
dependencies = [
    "pymupdf (>=1.28.0,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
