[project]
name = "ai-knowledge-base"
version = "0.1.0"
description = "企业知识库RAG问答系统"
authors = [
    {name = "yzq723232713",email = "723232713@qq.com"}
]
requires-python = "^3.11"
dependencies = [
    "pymupdf (>=1.28.0,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "python-multipart (>=0.0.32,<0.0.33)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
