[project]
name = "ai-knowledge-base"
version = "0.1.0"
description = "企业知识库RAG问答系统"
authors = [
    {name = "yzq723232713",email = "723232713@qq.com"}
]
requires-python = "^3.11"
dependencies = [
    "pymupdf (>=1.28.0,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "streamlit (>=1.59.2,<2.0.0)",
    "ragas (>=0.4.1,<1.0.0)",
    "langchain-openai (>=0.3.0,<1.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "langchain-huggingface (>=0.1.0,<1.0.0)",
    "openai (>=2.46.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

